k8s/canary/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: codemotion-frontend-vservice
spec:
  hosts:
  - "*"
  gateways:
  - codemotion-gw-canary
  http:
  - match:
    - headers:
        deployment:
          exact: canary
    route:
    - destination:
        host: codemotion-frontend-canary
        port:
          number: 80
  - route:
    - destination:
        host: codemotion-frontend
        port:
          number: 8080
